# tgtb

./: .gitignore  .gitmodules  Cargo.toml  README.md  deno.json  justfile  package.json  pnpm-lock.yaml  todo.txt  tsconfig.json
.github/workflows/: ci.yml  docs.yml  publish.yml  static.yml
.helix/: languages.toml
benchmarks/: validate_webapp.bench.ts
lib/: tg_validator.d.ts  tg_validator.internal.js  tg_validator.js  tg_validator.wasm
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs  validate_init_data.rs  validate_oauth.rs
src/: constants.ts  mod.ts  test-utils.ts
src/factories/: call_method.ts  validate_oauth.ts  validate_webapp.ts
src/test-utils/: index.ts
src/types/: api.ts  interface.ts  telegram.ts
src/utils/: create_secret.ts  crypto.ts  mod.ts  test-utils.ts
tests/: call_method.test.ts  reference.ts  test_utils.test.ts  utils.test.ts  validate_oauth.test.ts  validate_webapp.test.ts
