[package]
name = "tg-validator"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.100"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
