[package]
name = "tg_validator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.91"
js-sys = "0.3.68"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
thiserror = "1.0.57"
web-sys = { version = "0.3.68", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
wasm-bindgen-futures = "0.4.41"
