[package]
name = "tg_validator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
hmac = "0.12.1"
js-sys = "0.3.77"
hex = "0.4.3"
percent-encoding = "2.3.1"
sha2 = "0.10.8"
thiserror = "2.0.11"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
